--- a/addon-v2/package.json
+++ b/addon-v2/package.json
@@ -32,7 +32,10 @@
   },
   "dependencies": {
     "@embroider/addon-shim": "^1.8.7",
-    "decorator-transforms": "^1.0.1"
+    "decorator-transforms": "^1.0.1",
+    "ember-basic-dropdown": "^8.1.0",
+    "ember-concurrency": "^4.0.2",
+    "ember-power-select": "^8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
@@ -64,6 +67,13 @@
     "version": 2,
     "type": "addon",
     "main": "addon-main.cjs",
-    "app-js": {}
+    "app-js": {
+      "./components/edit.js": "./dist/_app_/components/edit.js",
+      "./components/list.js": "./dist/_app_/components/list.js",
+      "./components/search.js": "./dist/_app_/components/search.js",
+      "./components/start.js": "./dist/_app_/components/start.js",
+      "./helpers/array-includes.js": "./dist/_app_/helpers/array-includes.js",
+      "./services/datatable.js": "./dist/_app_/services/datatable.js"
+    }
   }
 }
