--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "concurrently": "^8.2.0",
     "ember-cli-addon-docs": "^7.0.1",
+    "eslint": "^9.3.0",
     "prettier": "^3.0.3",
     "prettier-plugin-ember-template-tag": "^1.1.0"
   },
