--- a/.github/workflows/push-dist.yml
+++ b/.github/workflows/push-dist.yml
@@ -1,3 +1,8 @@
+# Because this library needs to be built,
+# we can't easily point package.json files at the git repo for easy cross-repo testing.
+#
+# This workflow brings back that capability by placing the compiled assets on a "dist" branch
+# (configurable via the "branch" option below)
 name: Push dist
 
 on:
@@ -20,17 +25,8 @@ jobs:
           cache: npm
       - name: Install Dependencies
         run: npm ci
-      - name: Build Project
-        run: npm run build
-        working-directory: 'addon-v2'
-      - name: Commit and Push Changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git checkout -b dist
-          git add .
-          git commit -m "Publish dist for $GITHUB_SHA"
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git dist --force
-        working-directory: './addon-v2'
+      - uses: kategengler/put-built-npm-package-contents-on-branch@v2.0.0
+        with:
+          branch: dist
+          token: ${{ secrets.PAT_TOKEN }}
+          working-directory: 'addon-v2'
